--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -27,12 +27,10 @@
             </intent-filter>
         </receiver>
 -->
-<!-- Enable this after PeriodicProfisioner is ported from RemoteProvisioner.
-        <service android:name=".PeriodicProvisioner"
+        <service android:name=".provisioner.PeriodicProvisioner"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="false">
         </service>
--->
         <service android:name=".RemoteProvisioningService"
             android:exported="true">
             <intent-filter>
