rkpdapp unit tests instruments app now.
This commit will revert ceb51b2eb3bd97ca78820c3a7120e6eb4b8a0428 and add
the mainline module controller to cover specific modules.

Test: atest RkpdAppUnitTests
Change-Id: I1a9aec794fbf53ea7d490a54ff4d859f6c8cf428

--- a/app/tests/unit/AndroidManifest.xml
+++ b/app/tests/unit/AndroidManifest.xml
@@ -17,16 +17,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.rkpdapp.unittest">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
 
-    <!-- The tests use a local HTTP server, let the framework know this is ok. -->
-    <application android:usesCleartextTraffic="true">
+    <application>
         <uses-library android:name="android.test.runner" />
     </application>
 
     <instrumentation
             android:name="androidx.test.runner.AndroidJUnitRunner"
-            android:targetPackage="com.android.rkpdapp.unittest"
+            android:targetPackage="com.android.rkpdapp"
             android:label="rkpd app unit tests" />
 </manifest>
