--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="false">
         </service>
-        <service android:name=".RemoteProvisioningService"
+        <service android:name=".service.RemoteProvisioningService"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.android.rkpdapp.IRemoteProvisioning"/>
